cleanup entrypoint
- use less bashism
- restructure control flow a bit
- remove unused variables
- introduce cgroups for memory limits